--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,7 +6,7 @@
 </div>
 <nav>
   <a routerLink="/home" routerLinkActive="active">Home</a>
-  <a routerLink="/users" routerLinkActive="active">Users</a>
+  <a routerLink="/quote-text" routerLinkActive="active">Quote text</a>
   <a routerLink="/about" routerLinkActive="active">About</a>
   <a routerLink="/contact" routerLinkActive="active">Contact</a>
 </nav>
